# design_patterns

chap_1/: 单一职责原则.docx
chap_2/: CMakeLists.txt  里氏替换原则.docx
chap_2/doc/: .~里氏替换原则.docx  里氏替换原则.docx
chap_2/include/: AbstractGun.h  HandGun.h  MachineGun.h  Rifle.h  Soldier.h
chap_2/src/: AbstractGun.cpp  CMakeLists.txt  HandGun.cpp  MachineGun.cpp  Rifle.cpp  Soldier.cpp  main.cpp
chap_3/doc/: 依赖倒置原则.docx
chap_4/doc/: 接口隔离原则.docx
chap_5/doc/: 迪米特法则.docx
chap_6/doc/: 开闭原则.docx
